--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	
 	</style>
 	<script src="../p5.js"></script>
-	<script src="../addons/p5.dom.js"></script>
-	<script src="../addons/p5.sound.js"></script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
+	
 	</head>
 	<body>
 		<div id=scoreboard>
